--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           VERSION: ${{ steps.get_version.outputs.version }}
         run: |
           TAG="v$VERSION"
+          LATEST_TAG="latest"
 
           # Exit if the tag already exists
           if git rev-parse "$TAG" >/dev/null 2>&1; then
