Fix some depends in POM

--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,23 @@
     <name>NoDotNameDuplicates</name>
     <description>Minecraft plugin to prevent duplicate logins between Bedrock and Java players</description>
 
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <!-- Bukkit API (Provided by the server) -->
+        <!-- Spigot API (Provided by the server) -->
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
             <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
