--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.example</groupId>
   <artifactId>NoDotNameDuplicates</artifactId>
-  <version>1.0.18</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>NoDotNameDuplicates</name>
@@ -42,6 +42,12 @@
   </dependencies>
 
   <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+        </resource>
+    </resources>
     <finalName>NoDotNameDuplicates</finalName>
     <plugins>
       <!-- Bundle all needed classes into one JAR -->
