--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: NoDotNameDuplicates
 main: com.example.nodotnameduplicates.NoDotNameDuplicates
-version: 1.0
+version: '${project.version}'
 api-version: 1.20
-author: YourName
+author: JMiahMan
