--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,57 +40,51 @@ jobs:
       - name: Create GitHub Tag and Release
         env:
           VERSION: ${{ steps.get_version.outputs.version }}
-        run: |
-          TAG="v$VERSION"
-          LATEST_TAG="latest"
 
-          # Exit if the tag already exists
-          if git rev-parse "$TAG" >/dev/null 2>&1; then
-            echo "Tag $TAG already exists. Skipping release."
-            exit 0
-          fi
+      run: |
+         # Exit immediately if a command fails, making the script safer.
+         set -e
 
-          echo "Creating release for $TAG"
+         TAG="v$VERSION"
+         LATEST_TAG="latest"
 
-          # Generate changelog from commits since last tag
-          LAST_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
-          if [ -z "$LAST_TAG" ]; then
-            CHANGELOG=$(git log --pretty=format:"- %s")
-          else
-            CHANGELOG=$(git log "$LAST_TAG"..HEAD --pretty=format:"- %s")
-          fi
+         # Exit if the versioned tag already exists
+         if git rev-parse "$TAG" >/dev/null 2>&1; then
+           echo "Tag $TAG already exists. Skipping release."
+           exit 0
+         fi
 
-          echo "$CHANGELOG" > changelog.txt
+         echo "Creating release for $TAG"
+  
+         # --- Versioned Release ---
+         # Generate changelog from commits since the last tag
+         LAST_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+         if [ -z "$LAST_TAG" ]; then
+           CHANGELOG=$(git log --pretty=format:"- %s")
+         else
+           CHANGELOG=$(git log "$LAST_TAG"..HEAD --pretty=format:"- %s")
+         fi
+         echo "$CHANGELOG" > changelog.txt
 
-          # Create tag and release via GitHub CLI
-          gh release create "$TAG" --title "$TAG" --notes-file changelog.txt
+         # Create a PUBLISHED release using the tag.
+         # --draft=false overrides the repository setting that defaults new releases to drafts.
+         gh release create "$TAG" --title "$TAG" --notes-file changelog.txt --draft=false
 
-          # Upload JAR file(s) to the release
-          JAR_FILE=$(find target -name "*.jar" | head -n 1)
-          if [ -f "$JAR_FILE" ]; then
-            echo "Uploading JAR file: $JAR_FILE"
-            gh release upload "$TAG" "$JAR_FILE"
-            mv "$JAR_FILE" "target/NoDotNameDuplicates-latest.jar"
-            LATEST_JAR_FILE="target/NoDotNameDuplicates-latest.jar"
-          else
-            echo "No .jar file found in target/"
-            LATEST_JAR_FILE=""
-            exit 1
-          fi
+         # Upload JAR file to the new versioned release
+         JAR_FILE=$(find target -name "*.jar" | head -n 1)
+         if [ ! -f "$JAR_FILE" ]; then
+           echo "No .jar file found in target/"
+           exit 1
+         fi
+         echo "Uploading JAR file: $JAR_FILE"
+         gh release upload "$TAG" "$JAR_FILE"
 
-          # Create or update 'latest' tag to point to HEAD (overwrite if exists)
-          if git rev-parse "$LATEST_TAG" >/dev/null 2>&1; then
-            git tag -d "$LATEST_TAG"
-            gh api -X DELETE "repos/${GITHUB_REPOSITORY}/git/refs/tags/$LATEST_TAG"
-          fi
-          git tag "$LATEST_TAG"
-          git push origin "$LATEST_TAG" --force
+         # --- 'Latest' Release ---
+         # Delete the previous 'latest' release and its underlying git tag in one command.
+         echo "Deleting previous 'latest' release..."
+         gh release delete "$LATEST_TAG" --yes --cleanup-tag || echo "No previous 'latest' release to delete. Continuing."
 
-          # Create or update 'latest' release
-          if gh release view "$LATEST_TAG" >/dev/null 2>&1; then
-            echo "Updating existing 'latest' release"
-            gh release upload --clobber "$LATEST_TAG" "$LATEST_JAR_FILE"
-          else
-            echo "Creating new 'latest' release"
-            gh release create "$LATEST_TAG" --title "latest" --notes "Latest release" "$LATEST_JAR_FILE"
-          fi
+         # Create the new 'latest' release, ensuring it is also PUBLISHED.
+         echo "Creating new published 'latest' release..."
+         gh release create "$LATEST_TAG" --title "Latest Release" --notes "Latest development build. See versioned releases for stability." --draft=false "$JAR_FILE"
+         echo "Successfully created and published releases."
